--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta charset="UTF-8" />
+    <meta content="IE=edge" http-equiv="X-UA-Compatible" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <meta content="Creative technologist and ceramists" name="description" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="keywords"
+      content="design, portfolio, Gideon Ibemere, Gideon Ibemere Jr, Gideon, creative, technologist, creative technologist, Digital Creative, music pouch, esrosn, esos son reebok o son nike, were listening to, designer, developer, creative developer, ceramics, matt long porcelain"
     />
-    <link rel="apple-touch-icon" href="logo192.png" />
+    <meta name="author" content="Gideon Ibemere, Jr" />
+    <title>JS for Designers | Gideon Ibemere, Jr</title>
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="%PUBLIC_URL%/favicon_io/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="%PUBLIC_URL%/favicon_io/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="%PUBLIC_URL%/favicon_io/favicon-16x16.png"
+    />
+
+    <link
+      rel="mask-icon"
+      href="%PUBLIC_URL%/favicon_io/safari-pinned-tab.svg"
+    />
+    <link
+      rel="shortcut icon"
+      href="%PUBLIC_URL%/favicon_io/favicon.ico"
+      type="image/x-icon"
+    />
+    <meta name="msapplication-TileColor" content="#000000" />
+    <meta name="theme-color" content="#ffffff" />
+    <meta property="og:image" content="%PUBLIC_URL%/favicon_io/og-image.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="628" />
+    <meta property="og:title" content="Gideon Ibemere, Jr" />
+    <meta
+      property="og:description"
+      content="Creative technologist and ceramists"
+    />
+    <meta property="og:url" content="http://www.gideonjr.com/" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@gideonibemerejr" />
+    <meta name="twitter:creator" content="@gideonibemerejr" />
+    <meta name="twitter:title" content="Gideon Ibemere, Jr" />
+    <meta
+      name="twitter:description"
+      content="Creative technologist and ceramists"
+    />
+    <meta
+      name="twitter:image:src"
+      content="%PUBLIC_URL%/favicon_io/og-image.jpg"
+    />
+    <meta name="twitter:domain" content="http://www.gideonjr.com/" />
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1,shrink-to-fit=no"
+    />
+    <meta name="theme-color" content="#000000" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +81,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>JS for Designers | Gideon Ibemere, Jr</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
